<resources>
    <string name="app_name">Smart Agenda</string>
    <string name="goals">Goals</string>
    <string name="habits">Habits</string>
    <string name="tasks">Tasks</string>
    <string name="enter_your_goal">Enter your goal</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="close_app">Close App</string>
    <string name="settings">Settings</string>
    <string name="image_contentDescription">image</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="my_ai_assistant">My AI Assistant</string>
    <string name="smart_collaborative_agenda">Smart Collaborative Agenda</string>
    <string name="pleaseWait">Please Wait...</string>
    <string name="log_out">Log out</string>
</resources>