<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/nunitobold"
        android:text="Smart Collaborative Agenda"
        android:textColor="@color/white"
        android:textSize="@dimen/appTitle_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:src="@drawable/card"
                app:cardCornerRadius="@dimen/cardRadius"
                app:cardElevation="@dimen/cardElevation">

                <TextView
                    android:id="@+id/goals"
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:fontFamily="@font/nunitobold"
                    android:gravity="center"
                    android:text="@string/goals"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_text_size"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                app:cardCornerRadius="@dimen/cardRadius"
                app:cardElevation="@dimen/cardElevation">

                <TextView
                    android:id="@+id/habits"
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:fontFamily="@font/nunitobold"
                    android:gravity="center"
                    android:src="@drawable/card"
                    android:text="@string/habits"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_text_size"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/green"
            app:cardCornerRadius="@dimen/cardRadius"
            app:cardElevation="@dimen/cardElevation">

            <TextView
                android:id="@+id/tasks"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fontFamily="@font/nunitobold"
                android:gravity="center"
                android:src="@drawable/card"
                android:text="@string/tasks"
                android:textColor="@color/white"
                android:textSize="@dimen/card_text_size"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>